[gd_scene load_steps=20 format=3 uid="uid://bn4fdjbhpl08v"]

[ext_resource type="Script" uid="uid://r05eaej0gvuk" path="res://scripts/npc/area_2d.gd" id="1_1onm1"]
[ext_resource type="Texture2D" uid="uid://bknvelsstx2jb" path="res://assets/Personagens/Rodrigo/new_atlas_texture.tres" id="2_8vu3r"]
[ext_resource type="Texture2D" uid="uid://cpniq7i3cp11n" path="res://assets/Personagens/Rodrigo/Rodrigo_pixilart-sprite.png" id="3_kahmu"]
[ext_resource type="FontFile" uid="uid://dhq1kbwvasqme" path="res://assets/pixel_Fonte/pixelart.ttf" id="4_x36p7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x36p7"]
atlas = ExtResource("3_kahmu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qocj5"]
atlas = ExtResource("3_kahmu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llhoi"]
atlas = ExtResource("3_kahmu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne8j3"]
atlas = ExtResource("3_kahmu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsiha"]
atlas = ExtResource("3_kahmu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hlff"]
atlas = ExtResource("3_kahmu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfe4c"]
atlas = ExtResource("3_kahmu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehwir"]
atlas = ExtResource("3_kahmu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtmce"]
atlas = ExtResource("3_kahmu")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8iwb"]
atlas = ExtResource("3_kahmu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2811l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x36p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qocj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llhoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne8j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsiha")
}],
"loop": true,
"name": &"andar_baixo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hlff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfe4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehwir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtmce")
}],
"loop": true,
"name": &"andar_cima",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8vu3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8iwb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x36p7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n62ee"]
bg_color = Color(0.00784314, 0.00784314, 0.00784314, 0.470588)

[sub_resource type="LabelSettings" id="LabelSettings_8sug0"]
font = ExtResource("4_x36p7")
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x36p7"]
size = Vector2(115, 69)

[node name="rodrigo" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_1onm1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2811l")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.45093

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_x36p7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 65.0
offset_top = 228.0
offset_right = 585.0
offset_bottom = 324.0
theme_override_styles/normal = SubResource("StyleBoxFlat_n62ee")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 254.0
offset_right = 581.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 14
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="nomelabel" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 254.0

[node name="Retrato" type="TextureRect" parent="CanvasLayer"]
offset_left = 73.0
offset_top = 248.0
offset_right = 133.0
offset_bottom = 307.0
stretch_mode = 5

[node name="LabelInteracao" type="Label" parent="."]
offset_left = -33.0
offset_top = -55.0
offset_right = 35.0
offset_bottom = -27.0
label_settings = SubResource("LabelSettings_8sug0")
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_x36p7")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
